set01/problem02_compile_errors.txt
Compilation started at 1/22/2024, 11:48:33 AM
c:\Users\Dell\Documents\GitHub\c_activity_sets\set01\problem02.c:3:1: error: unknown type name 'dgyuweghdxzs'
 dgyuweghdxzs
 ^~~~~~~~~~~~
c:\Users\Dell\Documents\GitHub\c_activity_sets\set01\problem02.c:5:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'kesj'
 kesj
 ^~~~
Compilation finished at 1/22/2024, 11:48:34 AM
Compilation started at 1/22/2024, 11:50:18 AM
Compilation finished at 1/22/2024, 11:50:18 AM
Compilation started at 1/22/2024, 11:50:24 AM
Compilation finished at 1/22/2024, 11:50:24 AM
Compilation started at 1/22/2024, 11:52:29 AM
Compilation finished at 1/22/2024, 11:52:29 AM
